--- a/styles/styles.css
+++ b/styles/styles.css
@@ -582,12 +582,12 @@ main div.section.banner > div > *:nth-child(odd) {
     from {
       opacity: 0;
       transform: translateY(100%);
-      clip-path: inset(-100% -100% 100% 0);
+      clip-path: inset(-100% -150% 100% 0);
     }
     
     to { 
       opacity: 1;
-      clip-path: inset(-100% -100% 0 0);
+      clip-path: inset(-100% -150% 0 0);
     }
   }
 
